--- a/angular.json
+++ b/angular.json
@@ -12,17 +12,14 @@
       },
       "root": "",
       "sourceRoot": "src",
-      "prefix": "app",
+      "prefix": "clw",
       "architect": {
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "outputPath": "dist/clearway",
-            "index": "src/index.html",
-            "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "index": "src/app/main/index.html",
+            "browser": "src/app/main/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
@@ -32,7 +29,7 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/app/main/styles/styles.scss"
             ],
             "scripts": []
           },
@@ -91,12 +88,26 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/app/main/styles/styles.scss"
             ],
             "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         }
       }
     }
+  },
+  "cli": {
+    "schematicCollections": [
+      "angular-eslint"
+    ]
   }
 }
